--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "big.js": "^6.2.1",
+    "cssnano": "^5.1.14",
     "gh-pages": "^4.0.0",
     "history": "^5.3.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +31,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
@@ -68,13 +71,14 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^27.5.1",
+    "jest": "26.6.0",
     "jest-environment-jsdom": "^29.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
